# polynomial

./: .gitignore  CMakeLists.txt  README.md
include/: list.h  listexception.h  listiterator.h  monomial.h  polynomial.h  polynomial.inc  precompiled.h
sample/: CMakeLists.txt  main.cpp
src/: listexception.cpp  monomial.cpp  polynomial.cpp
